page structure done and move images to cloud storage

--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
-layout: page
+layout: p404
 title: 404 - Page not found
 ---
 
 Sorry, i can't find the page that you're looking for. You can try take for a look by going [back to the homepage]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jzlingmo" style="width: 400px;"/>]({{ site.baseurl }}/)
+[<img src="{{ site.imghost }}/404.jpg" alt="Constructocat by https://github.com/jzlingmo" style="width: 400px;"/>]({{ site.baseurl }}/)
