--- a/_posts/2015-3-26-Jekyll模板语法.md
+++ b/_posts/2015-3-26-Jekyll模板语法.md
@@ -1,6 +1,6 @@
 ---
 keywords: jekyll,模板,语法
-description: jekyll是静态网站/博客生成工具，使用前首先记录一下jekyll的变量及模板语法，jekyll基于Liquid模板进行扩展，大部分可参考Liquid语法
+description: jekyll是静态网站/博客生成工具，在这里记录一下jekyll的变量及模板语法，jekyll基于Liquid模板进行扩展，大部分可参考Liquid语法
 ---
 
 ##页面头部
