use markdown code highlight instead of jekyll highlight tag

--- a/_posts/2015-3-26-Jekyll模板语法.md
+++ b/_posts/2015-3-26-Jekyll模板语法.md
@@ -2,22 +2,27 @@
 keywords: jekyll,模板,语法
 description: jekyll是静态网站/博客生成工具，在这里记录一下jekyll的变量及模板语法，jekyll基于Liquid模板进行扩展，大部分可参考Liquid语法
 ---
+{% if page.description %}
+>{{ page.description }}
+{% endif %}
 
 ##页面头部
 
-{% highlight yaml %}
+``` yaml
+---
 layout:   post
 title:    title
 category: blog #或者categories: [blog, photo]
 description: description
 published: false # default true
 permalink: /photo # 重置当前页面的访问地址
-{% endhighlight %}
+---
+```
 
 
-##[全局变量](http://jekyllrb.com/docs/variables/)
+##全局变量
 
-- `site` \_config.yml 中配置的信息
+- `site` _config.yml 中配置的信息
 - `page` 当前页面的配置信息
 - `content` 模板中,用于引入子节点的内容
 - `paginator` 分页信息
@@ -59,23 +64,25 @@ permalink: /photo # 重置当前页面的访问地址
 - `paginator.previous_page_path` 上页路径
 - `paginator.next_page_path` 下页路径
 
-##[模板语法](http://jekyllrb.com/docs/templates/)
+##模板语法
 
 ###循环
 -反向排序并循环输出前10-20条文章
-{% highlight handlebars %}
+
+``` liquid
 {% raw %}
 {% for post in site.posts limit:20 offset:10 reversed %}
     {{ post.title }} {{ post.excerpt | remove: 'fuck' }}
 {% endfor %}
 {% endraw %}
-{% endhighlight %}
+```
 
 ###判断
 - `and` 且
 - `or` 或
 - `contains` 包含
-{% highlight handlebars %}
+
+``` liquid
 {% raw %}
 {% if page.excerpt %}
     {{ page.excerpt| strip_html }}
@@ -85,10 +92,10 @@ permalink: /photo # 重置当前页面的访问地址
     {{ site.description }}
 {% endif %}
 {% endraw %}
-{% endhighlight %}
+```
 
 ###多条件
-{% highlight handlebars %}
+``` liquid
 {% raw %}
 {% case condition %}
     {% when 1 %}
@@ -99,27 +106,28 @@ permalink: /photo # 重置当前页面的访问地址
     ... else ...
 {% endcase %}
 {% endraw %}
-{% endhighlight %}
+```
 
 ###赋值
-{% highlight handlebars %}
+``` liquid
 {% raw %}
 {% assign index = 1 %}
 {% endraw %}
-{% endhighlight %}
+```
 
 ###代码高亮
 -显示行号 linenos
 支持的语言参考[Rough Wiki](https://github.com/jneen/rouge/wiki/List-of-supported-languages-and-lexers)
-{% highlight handlebars linenos %}
+
+``` liquid
 {% raw %}
 {% highlight js linenos %}
 console.log('Hello world!')
 {% endhighlight %}
 {% endraw %}
-{% endhighlight %}
+```
 
-##[常用过滤器](http://jekyllrb.com/docs/templates/)
+##常用过滤器
 
 - `| date` 日期格式化 e.g. date: "%Y %h"
 - `| size` 输出数组长度
@@ -140,3 +148,9 @@ console.log('Hello world!')
 - `| date_to_long_string` 07 November 2008
 - `| date_to_rfc822` Mon, 07 Nov 2008 13:07:54 -0800
 - `| date_to_xmlschema` 2008-11-07T13:07:54-08:00
+
+##更多相关内容
+> 1. jekyll变量 http://jekyllrb.com/docs/variables
+> 2. jekyll模板 http://jekyllrb.com/docs/templates
+> 3. liquid详细介绍 https://github.com/Shopify/liquid/wiki/Liquid-for-Designers
+> 4. jekyll的推荐markdown引擎-redcarpet https://github.com/vmg/redcarpet
