change from redcarpet to kramdown

--- a/_posts/2015-3-26-Jekyll模板语法.md
+++ b/_posts/2015-3-26-Jekyll模板语法.md
@@ -6,7 +6,7 @@ description: jekyll是静态网站/博客生成工具，在这里记录一下jek
 >{{ page.description }}
 {% endif %}
 
-##页面头部
+## 页面头部
 
 ``` yaml
 ---
@@ -20,14 +20,14 @@ permalink: /photo # 重置当前页面的访问地址
 ```
 
 
-##全局变量
+## 全局变量
 
 - `site` _config.yml 中配置的信息
 - `page` 当前页面的配置信息
 - `content` 模板中,用于引入子节点的内容
 - `paginator` 分页信息
 
-###site下的变量
+### site下的变量
 - `site.time` 运行 jekyll 的时间
 - `site.pages` 所有页面
 - `site.posts` 所有文章
@@ -40,7 +40,7 @@ permalink: /photo # 重置当前页面的访问地址
 - `site.categories` 所有的category
 - `site.tags` 所有的tag
 
-###page下的变量
+### page下的变量
 - `page.content` 页面的内容
 - `page.title` 标题
 - `page.excerpt` 摘要
@@ -53,7 +53,7 @@ permalink: /photo # 重置当前页面的访问地址
 - `page.next` 下一篇文章
 - `page.previous` 上一篇文章
 
-###paginator下的变量
+### paginator下的变量
 - `paginator.per_page` 每页记录数
 - `paginator.posts` 当前页的文章列表
 - `paginator.page` 当前页码
@@ -64,9 +64,9 @@ permalink: /photo # 重置当前页面的访问地址
 - `paginator.previous_page_path` 上页路径
 - `paginator.next_page_path` 下页路径
 
-##模板语法
+## 模板语法
 
-###循环
+### 循环
 -反向排序并循环输出前10-20条文章
 
 ``` liquid
@@ -77,7 +77,7 @@ permalink: /photo # 重置当前页面的访问地址
 {% endraw %}
 ```
 
-###判断
+### 判断
 - `and` 且
 - `or` 或
 - `contains` 包含
@@ -94,7 +94,7 @@ permalink: /photo # 重置当前页面的访问地址
 {% endraw %}
 ```
 
-###多条件
+### 多条件
 ``` liquid
 {% raw %}
 {% case condition %}
@@ -108,14 +108,15 @@ permalink: /photo # 重置当前页面的访问地址
 {% endraw %}
 ```
 
-###赋值
+### 赋值
+
 ``` liquid
 {% raw %}
 {% assign index = 1 %}
 {% endraw %}
 ```
 
-###代码高亮
+### 代码高亮
 -显示行号 linenos
 支持的语言参考[Rough Wiki](https://github.com/jneen/rouge/wiki/List-of-supported-languages-and-lexers)
 
@@ -127,7 +128,7 @@ console.log('Hello world!')
 {% endraw %}
 ```
 
-##常用过滤器
+## 常用过滤器
 
 - `| date` 日期格式化 e.g. date: "%Y %h"
 - `| size` 输出数组长度
@@ -143,14 +144,16 @@ console.log('Hello world!')
 - `| jsonify` 格式化json数据输出
 - `| where:'title', 'today'` 查找title为'today'的数据
 
-###日期格式化
+### 日期格式化
+
 - `| date_to_string` 07 Nov 2008
 - `| date_to_long_string` 07 November 2008
 - `| date_to_rfc822` Mon, 07 Nov 2008 13:07:54 -0800
 - `| date_to_xmlschema` 2008-11-07T13:07:54-08:00
 
-##更多相关内容
-> 1. jekyll变量 http://jekyllrb.com/docs/variables
-> 2. jekyll模板 http://jekyllrb.com/docs/templates
-> 3. liquid详细介绍 https://github.com/Shopify/liquid/wiki/Liquid-for-Designers
-> 4. jekyll的推荐markdown引擎-redcarpet https://github.com/vmg/redcarpet
+## 更多相关内容
+
+> 1. jekyll变量 <http://jekyllrb.com/docs/variables>
+> 2. jekyll模板 <http://jekyllrb.com/docs/templates>
+> 3. liquid详细介绍 <https://github.com/Shopify/liquid/wiki/Liquid-for-Designers>
+> 4. jekyll的推荐markdown引擎-redcarpet <https://github.com/vmg/redcarpet>
