--- a/_posts/2015-3-26-Jekyll模板语法.md
+++ b/_posts/2015-3-26-Jekyll模板语法.md
@@ -70,11 +70,9 @@ permalink: /photo # 重置当前页面的访问地址
 -反向排序并循环输出前10-20条文章
 
 ``` liquid
-{% raw %}
-{% for post in site.posts limit:20 offset:10 reversed %}
+{% raw %}{% for post in site.posts limit:20 offset:10 reversed %}
     {{ post.title }} {{ post.excerpt | remove: 'fuck' }}
-{% endfor %}
-{% endraw %}
+{% endfor %}{% endraw %}
 ```
 
 ### 判断
@@ -83,37 +81,31 @@ permalink: /photo # 重置当前页面的访问地址
 - `contains` 包含
 
 ``` liquid
-{% raw %}
-{% if page.excerpt %}
+{% raw %}{% if page.excerpt %}
     {{ page.excerpt| strip_html }}
 {% elsif page.description %}
     {{ page.description }}
 {% else %}
     {{ site.description }}
-{% endif %}
-{% endraw %}
+{% endif %}{% endraw %}
 ```
 
 ### 多条件
 ``` liquid
-{% raw %}
-{% case condition %}
+{% raw %}{% case condition %}
     {% when 1 %}
     here is 1
     {% when 2 or 3 %}
     herer is 2 or 3
     {% else %}
     ... else ...
-{% endcase %}
-{% endraw %}
+{% endcase %}{% endraw %}
 ```
 
 ### 赋值
 
 ``` liquid
-{% raw %}
-{% assign index = 1 %}
-{% endraw %}
+{% raw %}{% assign index = 1 %}{% endraw %}
 ```
 
 ### 代码高亮
@@ -121,11 +113,9 @@ permalink: /photo # 重置当前页面的访问地址
 支持的语言参考[Rough Wiki](https://github.com/jneen/rouge/wiki/List-of-supported-languages-and-lexers)
 
 ``` liquid
-{% raw %}
-{% highlight js linenos %}
+{% raw %}{% highlight js linenos %}
 console.log('Hello world!')
-{% endhighlight %}
-{% endraw %}
+{% endhighlight %}{% endraw %}
 ```
 
 ## 常用过滤器
